--- a/Debug/makefile
+++ b/Debug/makefile
@@ -12,6 +12,7 @@ GEN_CMDS__FLAG :=
 ORDERED_OBJS += \
 "./startup_msp432p401r_ccs.obj" \
 "./system_msp432p401r.obj" \
+"./src/gdisp_lld_epaper.obj" \
 "./src/main.obj" \
 "./uGFX/src/gfx_mk.obj" \
 "../msp432p401r.cmd" \
@@ -160,8 +161,8 @@ epaper_gfx.hex: $(EXE_OUTPUTS)
 # Other Targets
 clean:
 	-$(RM) $(BIN_OUTPUTS__QUOTED)$(EXE_OUTPUTS__QUOTED)
-	-$(RM) "startup_msp432p401r_ccs.obj" "system_msp432p401r.obj" "src\main.obj" "uGFX\src\gfx_mk.obj" 
-	-$(RM) "startup_msp432p401r_ccs.d" "system_msp432p401r.d" "src\main.d" "uGFX\src\gfx_mk.d" 
+	-$(RM) "startup_msp432p401r_ccs.obj" "system_msp432p401r.obj" "src\gdisp_lld_epaper.obj" "src\main.obj" "uGFX\src\gfx_mk.obj" 
+	-$(RM) "startup_msp432p401r_ccs.d" "system_msp432p401r.d" "src\gdisp_lld_epaper.d" "src\main.d" "uGFX\src\gfx_mk.d" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
